# rs-todo

./: .gitignore  Cargo.toml  README.md  outline.md
src/: cli.rs  dirs.rs  fs.rs  fsx.rs  index.rs  io.rs  json.rs  lib.rs  main.rs  setup.rs  state.rs  storage.rs  task.rs  task_list.rs  tasks.rs
