[package]
name = "rs-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0.8", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"